--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "rust.rustup": {
         "toolchain": "nightly-2020-03-09-x86_64-apple-darwin"
-    }
+    },
+    "rust-client.channel": "nightly"
 }
